syntax = "proto3";

package pb;

option go_package=".;pb";

message RoomStat {
	int32 PlayRoundCount = 1; // 局数
}

message BingoModeStat {
	int32 PlayRoundCount = 1; // 局数
}

message ItemStat {
	int64 Cost = 1; // 消耗
	int64 Add = 2; // 产出
	int32 Count = 3; // 次数
	int64 CopyNum = 4; // 余额
}

message UserDayStat {
	int32 PlayRoundCount = 1;
	double FirstPayNum = 2;
	double PayNum = 3;
	int32 WatchAdNum = 4;
	bool IsEnter = 5;
	double RealFirstPayNum = 6; // 首次付费。不考虑测试订单
	double RealPayNum = 7; // 付费。不考虑测试订单
}

message StatBin {
	int32 OnlineSecs = 2; // 在线时长
	double PayNum = 8; // 充值金额
	map<int32,ItemStat> Items = 9; // 物品消耗产出统计
	string LastPayTime = 14; // 上次付费时间
	string LastItemWay = 15; // 上次消耗日志
	string LastEnterTime = 16; // 上次进入游戏时间
	string LastLeaveTime = 17; // 上次离开时间
	int32 LoginDayNum = 18; // 连续登陆天数
	string ClientVersion = 19; // 登陆版本
	int32 CardNum = 20; // 选卡数
	map<int32,UserDayStat> Day = 21; // 每天每日统计。KEY格式YYYYMMDD
	string LastServer = 23; // 上次访问的server
	int32 CopyLevel = 40; // 等级
	double FirstPayNum = 43;
}

message Maintain {
	string StartTime = 1;
	string EndTime = 2;
	string Content = 3;
	string AllowList = 4;
}
